--- a/service/service-customer/pom.xml
+++ b/service/service-customer/pom.xml
@@ -17,7 +17,12 @@
         <skipTests>true</skipTests>
     </properties>
 
+
     <dependencies>
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
