--- a/service/service-map/pom.xml
+++ b/service/service-map/pom.xml
@@ -14,6 +14,11 @@
     <version>1.0</version>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>3.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
