司机端登录（获取司机登录信息、更新司机认证信息）

--- a/service/service-driver/pom.xml
+++ b/service/service-driver/pom.xml
@@ -25,6 +25,10 @@
             <groupId>com.qcloud</groupId>
             <artifactId>cos_api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
